# Attendance_System

./: .gitignore  TEST_SUMMARY.md  credntials  pahses  prompt
backend/: .env.example  Procfile  pyproject.toml  render.yaml  requirements.txt  test_results.txt  test_system_flow.py
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/api/dependencies/: __init__.py  auth.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/endpoints/: __init__.py  analytics.py  attendance.py  auth.py  extended.py  faculty.py  management.py  recognition.py  reports.py  students.py  subjects.py
backend/app/core/: __init__.py  config.py  errors.py  limiter.py  security.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/schemas/: analytics.py  attendance.py  auth.py  common.py  faculty.py  management.py  recognition.py  reports.py  students.py  subjects.py
backend/app/services/: __init__.py  analytics.py  attendance.py  audit.py  auth.py  batch.py  face.py  face_onnx.py  management.py  recognition.py  recognition_advanced.py  reports.py  storage.py  students.py  subjects.py  supabase.py  supabase_admin.py  websocket.py
backend/mmattend_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: bootstrap_supabase.py  cleanup_test_data.py  phase2_verify.py  phase3_verify.py  provision_test_users.py
backend/tests/: test_advanced.py
docs/: IMPLEMENTATION_COMPLETE.md  PHASE_7_TEST_REPORT.md  ROLE_BASED_FEATURES.md  ROLE_PERMISSIONS_QUICK_REF.md  api-spec.md  folder-structure.md  phase-1-system-design.md  security-model.md  (+2 more)
(+34 files in other folders)
